--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <app-menu></app-menu>
 <!-- <app-cadastro-usuario></app-cadastro-usuario> -->
-<app-efetuar-venda></app-efetuar-venda>
+<!-- <app-efetuar-venda></app-efetuar-venda> -->
+<app-lista-usuario></app-lista-usuario>
