--- a/src/app/efetuar-venda/efetuar-venda.component.html
+++ b/src/app/efetuar-venda/efetuar-venda.component.html
@@ -4,15 +4,18 @@
             <form (submit)="adicionarVenda()">
                 <div class="row">
                     <div class="col-sm-6">
-                        <label for="inputState" class="form-label">Nome Produto:</label>
-                        <select id="inputState" class="form-select" [(ngModel)]="produtoSelecionado" name="produtoSelecionado"
-                            (ngModelChange)="buscarProduto(produtoSelecionado)">{{produtoSelecionado.nome}}
-                            <option *ngFor="let produto of produtos" [ngValue]="produto">{{ produto.nome }}</option>
+                        <label for="inputState" class="form-label">Nome Produto:
+                        </label>
+                        <select id="inputState" class="form-select" [(ngModel)]="produtoSelecionado"
+                            name="produtoSelecionado">{{produtoSelecionado.nome}}
+                            <option *ngFor="let produto of produtos" [ngValue]="produto"
+                                (change)="buscarProduto(produtoSelecionado)">{{ produto.nome }}</option>
                         </select>
                     </div>
                     <div class="col-sm-2">
                         <label for="quantidade" class="form-label">Quantidade:</label>
-                        <input type="number" class="form-control" id="quantidade" name="quantidade" [(ngModel)]="quantidade">
+                        <input type="number" class="form-control" id="quantidade" name="quantidade"
+                            [(ngModel)]="quantidade">
                     </div>
                 </div>
                 <div class="col-sm-12 mt-2">
@@ -29,16 +32,17 @@
                         <th scope="col">Valor</th>
                         <th scope="col">Subtototal</th>
                         <th scope="col">Data</th>
-                        <th scope="col">Ações</th>
+                        <th scope="col" class="align-middle text-center">Ações</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr *ngFor="let venda of listaVendas; let i = index">
-                        <td scope="col">{{ venda.id }}</td>
-                        <td scope="col"> {{ venda.produto.nome }}</td>
-                        <td scope="col">{{ venda.quantidade }}</td>
+                        <td scope="col" class="m-0 p-0">{{ venda.produto.nome }}</td>
+                        <td scope="col"> {{ venda.quantidade}}</td>
+                        <td scope="col">{{ venda.produto.valor }}</td>
                         <td scope="col">{{ venda.subtotal }}</td>
                         <td scope="col"> {{ venda.data }}</td>
+                        <td scope="col" class="align-middle text-center"><app-icon [name]="'excluir'"></app-icon></td>
                     </tr>
                 </tbody>
             </table>
