--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,21 +1,35 @@
-
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Pet Shop</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-            <li class="nav-item active">
-                <a class="nav-link" href="#">Usuários</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Estoque</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Vendas</a>
-            </li>
-        </ul>
+<div class="container-fluid p-0" style="background-color: #f7a839">
+    <div>
+        <nav class="navbar  navbar-expand-lg navbar-light p-1" style="background-color: #fda618">
+            <a class="navbar-brand" href="#" style="color: #faead8;">Pet Shop</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse   justify-content-center" id="navbarNav">
+                <ul class="nav nav-tabs">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#"
+                            style="color: #faead8; font-size: 1.2em;  border: 1em;">Usuários</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#" style="color: #ffffd3; font-size: 1.2em; border: 1em;">Estoque</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#" style="color: #ffffd3; font-size: 1.2em;  border: 1em;">Vendas</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
     </div>
-</nav>
+    <div>
+        <div style="background-color: #faead8; min-height: 650px; padding: 5em; padding-top: 1.5em;">
+            <div class="row">
+                <p class="titulo_pagina">{{ pageTitle }}</p>
+            </div>
+            <div class="body">
+                <ng-content></ng-content>
+            </div>
+        </div>
+    </div>
+</div>
