--- a/src/app/efetuar-venda/efetuar-venda.component.html
+++ b/src/app/efetuar-venda/efetuar-venda.component.html
@@ -1,4 +1,4 @@
-<app-menu [pageTitle]="'Caixa Venda'">
+<app-menu [pageTitle]="'Cadastrar Produto'">
     <div class="row">
         <div class="col-sm-4">
             <form (submit)="adicionarVenda()">
