--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,31 +1,31 @@
-<div class="container-fluid p-0" style="background-color: #f7a839">
+<div class="container-fluid p-0" style="background-color: #ffa500">
     <div>
-        <nav class="navbar  navbar-expand-lg navbar-light p-1" style="background-color: #fda618">
-            <a class="navbar-brand" href="#" style="color: #faead8;">Pet Shop</a>
+        <nav class="navbar navbar-expand-lg navbar-light p-1 menu"
+            style="background: linear-gradient(45deg, #FFA500, #FF6347); box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);">
+            <a class="navbar-brand" href="#" style="color: #fff; font-weight: bold;">Pet Shop</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse   justify-content-center" id="navbarNav">
-                <ul class="nav nav-tabs">
+            <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+                <ul class="navbar-nav">
                     <li class="nav-item active">
-                        <a class="nav-link" href="#"
-                            style="color: #faead8; font-size: 1.2em;  border: 1em;">Usuários</a>
+                        <a class="nav-link" href="menu-usuario" style="color: #fff;">Usuários</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#" style="color: #ffffd3; font-size: 1.2em; border: 1em;">Estoque</a>
+                        <a class="nav-link" href="menu-estoque" style="color: #fff;">Estoque</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#" style="color: #ffffd3; font-size: 1.2em;  border: 1em;">Vendas</a>
+                        <a class="nav-link" href="menu-venda" style="color: #fff;">Vendas</a>
                     </li>
                 </ul>
             </div>
         </nav>
     </div>
     <div>
-        <div style="background-color: #faead8; min-height: 650px; padding: 5em; padding-top: 1.5em;">
+        <div style="background-color: #fff; min-height: 650px; padding: 5em; padding-top: 1.5em; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); border-radius: 10px;">
             <div class="row">
-                <p class="titulo_pagina">{{ pageTitle }}</p>
+                <h1 class="titulo_pagina">{{ pageTitle }}</h1>
             </div>
             <div class="body">
                 <ng-content></ng-content>
@@ -33,3 +33,8 @@
         </div>
     </div>
 </div>
+
+
+
+
+
