--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -2,7 +2,8 @@
     <div>
         <nav class="navbar navbar-expand-lg navbar-light p-1 menu"
             style="background: linear-gradient(45deg, #FFA500, #FF6347); box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);">
-            <a class="navbar-brand" href="#" style="color: #fff; font-weight: bold;">Pet Shop</a>
+            <img [src]="patinha" alt="" width="30" height="30" style="margin-left: 20px;">
+            <a class="navbar-brand" href="#" style="color: #fff; font-weight: bold; padding-left: 10px;">Pet Shop</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
