Criando componente listar-usuarios

--- a/src/app/lista-usuario/lista-usuario.component.html
+++ b/src/app/lista-usuario/lista-usuario.component.html
@@ -1,1 +1,41 @@
-<p>nome-component works!</p>
+<app-menu [pageTitle]="'Usuários'">
+
+
+    <div class="container-fluid">
+        
+        <table class="table table-bordered border-warning">
+            <thead class="table-warning">
+                <tr>
+                    <th scope="col">Codigo</th>
+                    <th scope="<col">Nome</th>
+                    <th scope="<col">CPF</th>
+                    <th scope="<col">Perfil</th>
+                    <th scope="<col">Departamento</th>
+                    <th scope="col">Situação</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <th scope="row">1</th>
+                    <td>Bruno</td>
+                    <td>000.000.000-00</td>
+                    <td>Gerente</td>
+                    <td>Gerencia</td>
+                    <td>Ativo</td>
+                </tr>
+                <tr>
+                    <th scope="row">2</th>
+                    <td>Ana Clara</td>
+                    <td>000.000.000-00</td>
+                    <td>Funcionaria</td>
+                    <td>Comercial</td>
+                    <td>Ativo</td>
+                </tr>
+
+            
+
+           
+            </tbody>
+        </table>
+    </div>
+</app-menu>
