--- a/src/app/editar-usuario/editar-usuario.component.css
+++ b/src/app/editar-usuario/editar-usuario.component.css
@@ -32,5 +32,6 @@ input[type="radio"]{
     height: 20px;
 }
 input[type="radio"]:checked{
+    border-color: #862907;
     background-color: #ff4500;
 }
