--- a/src/app/editar-usuario/editar-usuario.component.html
+++ b/src/app/editar-usuario/editar-usuario.component.html
@@ -24,9 +24,13 @@
                 </div>
 
                 <div class="col-sm-2">
-                    <div>
-                        <!--<img [src]="getGenero()" alt="" class="rounded-circle" style="border: 1px solid #726658; padding-top: 10px;" width="200" height="200">
-                        <img src="https://www.imagensempng.com.br/wp-content/uploads/2021/08/02-52.png" width="90%">-->
+                    <div *ngIf="usuario.sexo == 'Feminino'">
+                        <img [src]="Feminino" alt="" class="rounded-circle" style="border: 1px solid #726658; padding-top: 10px;" width="200" height="200">
+                        <!--<img src="https://www.imagensempng.com.br/wp-content/uploads/2021/08/02-52.png" width="90%">-->
+                    </div>
+                    <div *ngIf="usuario.sexo == 'Masculino'">
+                        <img [src]="Masculino" alt="" class="rounded-circle" style="border: 1px solid #726658; padding-top: 10px;" width="200" height="200">
+                        <!--<img src="https://www.imagensempng.com.br/wp-content/uploads/2021/08/02-52.png" width="90%">-->
                     </div>
                 </div>
 
@@ -85,12 +89,12 @@
                     <div class="col-sm-2" style="padding-left: 50px;">
                         <label for="sexoFunc" class="form-label">Sexo</label>
                         <div class="form-check">
-                            <input class="form-check-input" type="radio" value="Homem" name="flexRadioDefault" id="Homem" checked>
+                            <input [(ngModel)]="usuario.sexo" class="form-check-input" type="radio" value="Masculino" name="flexRadioDefault" id="Homem" checked>
                             <label class="form-check-label" for="flexRadioDefault1">Masculino</label>
                         </div>
 
                         <div class="form-check">
-                            <input class="form-check-input" type="radio" value="Mulher" name="flexRadioDefault" id="Mulher">
+                            <input [(ngModel)]="usuario.sexo" class="form-check-input" type="radio" value="Feminino" name="flexRadioDefault" id="Mulher">
                             <label class="form-check-label" for="flexRadioDefault2">Feminino</label>
                         </div>
 
@@ -98,9 +102,9 @@
 
                     <div class="col-sm-3">
                         <label for="inputState" class="form-label">Função:</label>
-                        <select id="inputState" class="form-select" name="funcaoSelecionado">
+                        <select id="inputState" class="form-select input-style" name="funcaoSelecionado">
                             <option>Administrador</option>
-                            <option>Vendedor</option>
+                            <option>Funcionário</option>
                         </select>
                     </div>
 
