Cadastro de usuario com validações

--- a/src/app/menu-usuario/menu-usuario.component.html
+++ b/src/app/menu-usuario/menu-usuario.component.html
@@ -12,7 +12,7 @@
             <div class="card m-4 w-50 h-100 card-vinho p-3"> <!-- Aplicando a classe card-vinho -->
                 <div class="card-body d-flex flex-column justify-content-center align-items-center">
                     <h5 class="card-title">Cadastrar Usuario</h5>
-                    <a href="cadastrar-usuario" class="btn btn-primary btn-bege mt-3">Iniciar Cadastro</a> <!-- Aplicando a classe btn-bege -->
+                    <a href="cadastro-usuario" class="btn btn-primary btn-bege mt-3">Iniciar Cadastro</a> <!-- Aplicando a classe btn-bege -->
                 </div>
             </div>
         </div>
