--- a/src/app/menu-estoque/menu-estoque.component.html
+++ b/src/app/menu-estoque/menu-estoque.component.html
@@ -4,7 +4,7 @@
             <div class="card m-4 w-50 h-100 card-vinho p-3"> <!-- Aplicando a classe card-vinho -->
                 <div class="card-body d-flex flex-column justify-content-center align-items-center">
                     <h5 class="card-title">Listar Produtos</h5>
-                    <a href="#" class="btn btn-primary btn-bege mt-3">Iniciar Listagem</a> <!-- Aplicando a classe btn-bege -->
+                    <a href="lista-produtos" class="btn btn-primary btn-bege mt-3">Iniciar Listagem</a> <!-- Aplicando a classe btn-bege -->
                 </div>
             </div>
         </div>
