--- a/src/app/lista-usuario/lista-usuario.component.html
+++ b/src/app/lista-usuario/lista-usuario.component.html
@@ -1,41 +1,27 @@
 <app-menu [pageTitle]="'Usuários'">
-
-
-    <div class="container-fluid">
-        
-        <table class="table table-bordered border-warning">
-            <thead class="table-warning">
-                <tr>
-                    <th scope="col">Codigo</th>
-                    <th scope="<col">Nome</th>
-                    <th scope="<col">CPF</th>
-                    <th scope="<col">Perfil</th>
-                    <th scope="<col">Departamento</th>
-                    <th scope="col">Situação</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th scope="row">1</th>
-                    <td>Bruno</td>
-                    <td>000.000.000-00</td>
-                    <td>Gerente</td>
-                    <td>Gerencia</td>
-                    <td>Ativo</td>
-                </tr>
-                <tr>
-                    <th scope="row">2</th>
-                    <td>Ana Clara</td>
-                    <td>000.000.000-00</td>
-                    <td>Funcionaria</td>
-                    <td>Comercial</td>
-                    <td>Ativo</td>
-                </tr>
-
-            
-
-           
-            </tbody>
-        </table>
-    </div>
+    <table class="table table-bordered border-warning">
+        <thead class="table-warning">
+            <tr>
+                <th scope="col">Código</th>
+                <th scope="col">Nome</th>
+                <th scope="col">CPF</th>
+                <th scope="col">Perfil</th>
+                <th scope="col">Departamento</th>
+                <th scope="col">Situação</th>
+                <th scope="col">Ações</th> <!-- Coluna para as ações -->
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let usuario of usuarios">
+                <th scope="row">{{ usuario.codigo }}</th>
+                <td>{{ usuario.nome }}</td>
+                <td>{{ usuario.cpf }}</td>
+                <td>{{ usuario.perfil }}</td>
+                <td>{{ usuario.departamento }}</td>
+                <td>{{ usuario.situacao }}</td>
+                <td class="align-middle text-center"><a href="editar-usuario"><app-icon [name]="'editar'" class="icon-editar"></app-icon></a>     
+                </td>
+            </tr>
+        </tbody>
+    </table>
 </app-menu>
